Add QR-code Add referrer field Add examples Update for next event

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,6 +14,10 @@ textarea, input[type="checkbox"] {
     color: #f18613;
 }
 
+.jmfc-examples {
+    font-size: x-small;
+}
+
 #logo {
     cursor: pointer;
 }
